# CS479-Assignment-PointNet

./: .gitignore  README.md  pyproject.toml
pointnet/: model.py  train_ae.py  train_cls.py  train_seg.py
