[project]
name = "CS479-Assignment-PointNet"
version = "2025"
description = "CS479 Assignment 1"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "einx>=0.3.0",
    "h5py>=3.15.1",
    "jaxtyping>=0.3.3",
    "jupytext>=1.18.1",
    "matplotlib>=3.10.8",
    "nbdime>=4.0.2",
    "pre-commit>=4.5.0",
    "ruff>=0.14.9",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
]

[tool.uv]
python-preference = "managed"

[tool.ruff]
include = ["pointnet/**/*.py"]
extend-exclude = []

target-version = "py313"
line-length = 120
respect-gitignore = true

[tool.ruff.lint.extend-per-file-ignores]
# Also ignore `E402` in all `__init__.py` files.
"__init__.py" = ["E402", "F401", "F403", "E501"]

[tool.ruff.lint]
ignore = ["F722"] # jaxtyping annotations
extend-select = [
  "E", "F",       # Pyflakes/pycodestyle basics
  "I",            # Import sorting (isort)
  "UP",           # pyupgrade
  "B",            # flake8-bugbear
  "SIM",          # flake8-simplify
  "W",            # pycodestyle warnings
]

[tool.ruff.format]
docstring-code-format = true
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
